# input-action-configurator

./: .gitignore  AGENTS.md  I18N_MIGRATION_PLAN.md  KODA.md  PROGRESS.md  README.md  SPEC.md  STYLE_MIGRATION_PLAN.md  demo.config.yaml  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/: tauri.conf.json
src/app/: App.vue
src/entities/window-detector/: README.md  index.ts  metadata.json
src/shared/api/: config.ts
src/shared/i18n/: index.ts
src/shared/i18n/locales/: en.json  ru.json
src/shared/lib/: capabilities.test.ts  configLinks.ts  yaml-converter.test.ts  yaml-converter.ts
src/shared/lib/stores/: config.test.ts  config.ts  gui.ts
src/shared/lib/types/: device-rule.ts  index.ts
src/shared/ui/base/: BaseButton.vue  BaseCard.vue  BaseCheckbox.vue  BaseDropdown.vue  BaseDropdownItem.vue  BaseIconButton.vue  BaseInput.vue  BaseLabel.vue  BaseModal.vue  BaseResizablePanel.vue  BaseSelect.vue  BaseTab.vue  BaseTabs.vue  BaseThreeColumnPanel.vue  ConditionGroup.vue  FieldHelp.vue  (+2 more)
src/widgets/: ConfigPreviewModal.vue  ConfirmModal.vue  SettingsModal.vue  WelcomeModal.vue
src/widgets/DeviceList/: DeviceList.vue  index.ts
src/widgets/DeviceRulesEditor/: DeviceRulesEditor.vue
src/widgets/DeviceRulesModal/: DeviceRulesModal.vue
src/widgets/TriggerEditor/: ActionsEditor.vue  AppSelectorModal.vue  BasicProperties.vue  ConditionsEditor.vue  DirectionSettings.vue  InputActionEditor.vue  KeyboardModifierToggles.vue  Options.vue  TriggerEditor.vue  index.ts
src/widgets/TriggerList/: NewTriggerForm.vue  TriggerCard.vue  TriggerList.vue  index.ts
src/widgets/YamlPreview/: YamlPreview.vue
(+3 files in other folders)
